--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@ng-bootstrap/ng-bootstrap": "^5.1.0",
     "bootstrap": "^4.3.1",
     "ngx-toastr": "^10.0.4",
+    "ngx-webstorage": "^5.0.0",
     "progress-tracker": "^2.0.6",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
+    "xregexp": "^4.3.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
