--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^4.4.1",
     "ngx-spinner": "^8.1.0",
     "ngx-toastr": "^10.2.0",
+    "ngx-trim-directive": "^1.0.11",
     "ngx-webstorage": "^5.0.0",
     "progress-tracker": "^2.0.6",
     "rxjs": "~6.5.4",
