--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,10 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/cookie-notice/dist/cookie.notice.js",
+              "src/cookie-notice-config.js"
+            ]
           },
           "configurations": {
             "production": {
