--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~9.0.3",
     "@ng-bootstrap/ng-bootstrap": "^5.3.0",
     "bootstrap": "^4.4.1",
+    "cookie-notice": "^1.2.4",
     "ngx-spinner": "^8.1.0",
     "ngx-toastr": "^10.2.0",
     "ngx-trim-directive": "^1.0.11",
